<resources>
    <string name="app_name" translatable="false">AAAD</string>
    <string name="title_activity_about_payment">PRO Version</string>
    <string name="switch_to_pro_statement">The free version of AAAD allows you to have one free download each month. If you want to enjoy unlimited free downloads, you can switch to PRO version and you will enjoy full functionalities and app updates!</string>
    <string name="congratsPro">Congratulations, you have PRO version!</string>
    <string name="About">About</string>
    <string name="have_promo_code">I have a promo code</string>
    <string name="promo_code">Enter promo code</string>
    <string name="input_promo_code_here">Input promo code here</string>
    <string name="about_to_download">You are about to download %1$s. Do you wish to continue?</string>
    <string name="warning_payment">Payment processing is securely handled by Stripe Inc. AAAD does not collect or store your payment information. At the end of the payment, please manually press \"Return to merchant\" for the transaction to be validated.</string>
    <string name="attention">ATTENTION</string>
    <string name="next_download_available">Next download will be available on: %1$s</string>
    <string name="connect_error">CONNECTION ERROR</string>
    <plurals name="remaining_downloads">
        <item quantity="one">You have 1 download remaining</item>
        <item quantity="other">You have no download remaining</item>
    </plurals>
    <string name="about_part_one">"<![CDATA[AAAD (Android Auto Apps Downloader) is developed and mantained by Shmykelsa.<br><br>The available apps are made possible by the following developers:<br>]]>"</string>
    <string name="pro_unlocked">Congratulations, PRO version unlocked</string>
    <string name="cancelled_payment">Purchase cancelled</string>
    <string name="please_enter_code">Please enter a code</string>
    <string name="connection_error">Connection error, could not verify</string>
    <string name="not_valid_code">Not a valid code</string>
    <string name="downloading_progress">Downloading…</string>
    <string name="aa_mirror_plus_description">Alternative to AAMirror with some more functionalities.</string>
    <string name="aapassenger_description">This app was made for allowing passengers to manage some functionalities in Android Auto. Requires the passenger to download AAPassenger. Working state is currently unknown.</string>
    <string name="aabrowser_description">A new web browser designed for Android Auto with Material 3 design, fullscreen video playback, and optimized automotive interface.</string>
    <string name="s2a_description">The most complete and full-featured mirroring app for Android Auto. Includes many features like a customizable launcher, split screen, custom screen sizes and much more!</string>
    <string name="aamirror_description">The first and long-lasting screen mirror app for Android Auto. The ancestor of a family, AAMirror simply mirrors the screen of your phone to the car.</string>
    <string name="aa_stream_description">Another alternative to AAMirror with some extra functionalities. Recently revived and fixed for newer Android versions by Annexhack.</string>
    <string name="carstream_description">Formerly known as "YouTube Auto", CarStream was one of the first apps made with the custom apps SDK. It was born with the main purpose of delivering YouTube to Android Auto and then it became a web browser with many capabilities.
    </string>
    <string name="fermata_description">"The most complete video and audio player for Android Auto, featuring a full player experience with many features such as network streams and also a web browser. It also comes with the companion app Fermata Control that allows to manage the playback outside the app and from the controls on steering wheel."</string>
    <string name="s2a_redirect">You will be redirected to screen2auto website. From there, select the version and open with AAAD.</string>
    <string name="screen2auto_download">You are going to install Screen2Auto. Do you want to continue?</string>
    <string name="aawidgets_description">Born with one single task. Bring a widget to Android Auto!</string>
    <string name="performance_monitor_description">This is a performance monitor, based on Martoreto\'s aa-stats. It\'s made specifically for use with the Volkswagen/Skoda/Seat/Audi MIB2 infotainment units, but it might also work on others, as long as they have Android Auto support. Needs also VAG extension to work on Volkswagen Cars.</string>
    <string name="aatorque_description">AATorque brings the OBD-II vehicle diagnostics app Torque Pro to Android Auto. Monitor your car\'s performance, view diagnostic data, and access real-time vehicle information directly from your car\'s display.</string>
    <string name="promotion">You are eligible for a 15% off</string>
    <string name="onboarding_warning_title">⚠️ Important Warning</string>
    <string name="onboarding_warning_message">This app is NOT affiliated with softonic.com, uptodown.com, or aadapk.com, aadapk.app. The only official source is github.com</string>
    <string name="onboarding_official_source">Official source: github.com/shmykelsa/AAAD</string>
    <string name="onboarding_welcome_title">Welcome to AAAD!</string>
    <string name="onboarding_welcome_subtitle">Android Auto Apps Downloader</string>
    <string name="onboarding_welcome_description">This utility will help install custom apps on Android Auto for non rooted phones. Swipe through to learn how to use the app, then grant the required permissions to get started.</string>
    <string name="onboarding_page_selection_title">Select and Install</string>
    <string name="onboarding_page_selection_description">Select the app you want to install and wait for the system installer to come up.</string>
    <string name="onboarding_page_info_title">App Information</string>
    <string name="onboarding_page_info_description">If you are unsure about which app to install, long press the button to have a description.</string>
    <string name="onboarding_permissions_title">Required Setup</string>
    <string name="onboarding_permissions_subtitle">Grant permissions to install custom apps</string>
    <string name="onboarding_unknown_sources_title">Install Unknown Apps</string>
    <string name="onboarding_unknown_sources_description">Required to install APK files from external sources</string>
    <string name="onboarding_notifications_title">Notifications</string>
    <string name="onboarding_notifications_description">Get notified about download progress and app updates</string>
    <string name="onboarding_aa_dev_title">Android Auto Developer Settings (Recommended)</string>
    <string name="onboarding_aa_dev_description">Optional step to enhance your Android Auto experience</string>
    <string name="onboarding_aa_dev_warning">For the best experience with custom apps on Android Auto, we recommend enabling \"Unknown sources\" in the Android Auto developer settings.</string>
    <string name="onboarding_open_aa_dev">View Developer Settings</string>
    <string name="onboarding_play_protect_title">Google Play Protect</string>
    <string name="onboarding_play_protect_description">Temporarily disable to allow custom app installation</string>
    <string name="onboarding_play_protect_warning">Google Play Protect may block installation of custom apps. You need to temporarily disable it or allow AAAD when prompted.</string>
    <string name="onboarding_open_play_protect">Open Play Protect Settings</string>
    <string name="onboarding_shizuku_title">🚀 Enhanced Installation (Optional)</string>
    <string name="onboarding_shizuku_subtitle">For Android 14+ power users</string>
    <string name="onboarding_shizuku_standard_mode">Standard Mode (Recommended)</string>
    <string name="onboarding_shizuku_standard_description">Uses the system installer. Works for everyone. Shows installation prompts.</string>
    <string name="onboarding_shizuku_enhanced_mode">Enhanced Mode with Shizuku</string>
    <string name="onboarding_shizuku_enhanced_description">Silent installation without prompts. Requires one-time setup.</string>
    <string name="onboarding_shizuku_status">Shizuku Status:</string>
    <string name="onboarding_shizuku_not_installed">Not installed</string>
    <string name="onboarding_shizuku_not_running">Installed but not running</string>
    <string name="onboarding_shizuku_no_permission">Running but permission not granted</string>
    <string name="onboarding_shizuku_ready">Ready to use</string>
    <string name="onboarding_shizuku_install">Install Shizuku</string>
    <string name="onboarding_shizuku_start">Start Shizuku</string>
    <string name="onboarding_shizuku_grant_permission">Grant Permission</string>
    <string name="onboarding_shizuku_start_service">Shizuku installed - tap to start the service</string>
    <string name="onboarding_shizuku_start_button">Start Shizuku Service</string>
    <string name="shizuku_service_not_started">Shizuku service is not running. Please open Shizuku and start the service.</string>
    <string name="onboarding_shizuku_what_is_it">What is Shizuku?</string>
    <string name="onboarding_shizuku_explanation">Shizuku is a tool that allows apps to use system-level permissions via wireless debugging. It enables silent app installation on Android 14+ without root. You can still use AAAD without it!</string>
    <string name="onboarding_shizuku_steps_title">Setup Steps:</string>
    <string name="onboarding_shizuku_step1">1. Install Shizuku app</string>
    <string name="onboarding_shizuku_step2">2. Enable Developer Options</string>
    <string name="onboarding_shizuku_step3">3. Enable Wireless Debugging</string>
    <string name="onboarding_shizuku_step4">4. Start Shizuku</string>
    <string name="onboarding_shizuku_step5">5. Grant permission to AAAD</string>
    <string name="onboarding_shizuku_learn_more">Learn More</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_previous">Previous</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_grant_permissions">Grant Permissions</string>
    <string name="onboarding_continue">Continue to App</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_finish">Finish Setup</string>
    <string name="show_intro">Show intro</string>
    <string name="onboarding_page_multimedia_title">Multimedia apps</string>
    <string name="onboarding_page_mirroring_title">Mirroring apps</string>
    <string name="onboarding_page_others_title">Others</string>
    <string name="status_installed">Installed</string>
    <string name="status_update_available">Update Available</string>
    <string name="status_update_to_version">Update to %1$s</string>
    <string name="status_not_installed">Not Installed</string>
    <string name="status_downloading">Downloading…</string>
    <string name="status_installing">Installing…</string>
    <string name="action_install">Install</string>
    <string name="action_update">Update</string>
    <string name="action_open">Open</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_download_failed">Download failed</string>
    <string name="error_installation_failed">Installation failed</string>
    <string name="error_network_unavailable">Network unavailable</string>
    <string name="go_pro">GO PRO</string>
    <string name="i_m_good">I\'m good</string>
    <string name="i_want_to_transfer_license_here">I want to transfer license here</string>
    <string name="i_want_to_transfer_license_from_here">I want to transfer license from here</string>
    <string name="license_transfer_help">If you want to transfer the license from one phone to the other, you are in the right place. Please select what you want to do</string>
</resources>