<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPaymentActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/central_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/upper_textview"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_icon"
        app:layout_constraintBottom_toTopOf="@id/central_textview"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold"
        android:text="@string/title_activity_about_payment"
        android:maxLines="2"
        android:ellipsize="end"
        android:paddingTop="15dp"/>

    <TextView
        android:id="@+id/central_textview"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_icon"
        app:layout_constraintBottom_toTopOf="@id/next_time_download"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:text="@string/switch_to_pro_statement"
        android:maxLines="4"
        android:ellipsize="end"
        android:paddingTop="15dp"/>

    <TextView
        android:id="@+id/next_time_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/central_textview"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        android:layout_marginBottom="40dp"
        android:text=""
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:paddingTop="8dp"/>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:layout_marginBottom="10dp">

    <Button
        android:id="@+id/noproblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/i_m_good"
        style="@style/ButtonStyle" />

        <Button
            android:id="@+id/proButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_pro"
            android:onClick="checkout"
            android:visibility="visible"
            style="@style/ButtonStyle"
            android:layout_marginTop="18dp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>